# TestGraphics

./: .gitignore  LICENSE  README.md
gloss-examples/: stack.yaml
test-FieldTrip/: LICENSE  README.md  stack.yaml  test-FieldTrip.cabal
test-gloss/: README.md  stack.yaml  test-gloss.cabal
test-gloss/src/: Lib.hs
