name:                test-FieldTrip
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/patrikja/test-FieldTrip#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Jansson
maintainer:          patrik.ja@gmail.com
copyright:           Patrik Jansson
category:            none
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, FieldTrip >= 0.2.7
  default-language:    Haskell2010

executable test-FieldTrip-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test-FieldTrip
  default-language:    Haskell2010

test-suite test-FieldTrip-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test-FieldTrip
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/patrikja/test-FieldTrip
